fix: add connection's UT in build.gn
Signed-off-by: liangjunhao <liangjunhao10@huawei.com>

--- a/tests/core/connection/BUILD.gn
+++ b/tests/core/connection/BUILD.gn
@@ -37,10 +37,7 @@ group("unittest") {
     deps += [ "tcp:TcpManagerTest" ]
   }
   if (softbus_communication_wifi_feature) {
-    deps += [
-      "wifi_direct:WifiDirectTest",
-      "wifi_direct/adapter/single:unittest",
-    ]
+    deps += [ "wifi_direct:unittest" ]
   }
 }
 
