--- a/tests/core/connection/wifi_direct/BUILD.gn
+++ b/tests/core/connection/wifi_direct/BUILD.gn
@@ -74,6 +74,7 @@ group("unittest") {
   testonly = true
   deps = [
     ":WifiDirectTest",
+    "adapter/single:unittest",
     "data:unittest",
     "negotiate_state:unittest",
     "processor:unittest",
