--- a/tests/core/discovery/BUILD.gn
+++ b/tests/core/discovery/BUILD.gn
@@ -40,8 +40,10 @@ group("unittest") {
     ]
   }
   if (has_enhance_test) {
-    deps +=
-        [ "$dsoftbus_root_path/dsoftbus_enhance/test/core/discovery:unittest" ]
+    deps += [
+      "$dsoftbus_root_path/dsoftbus_enhance/test/core/connection:unittest",
+      "$dsoftbus_root_path/dsoftbus_enhance/test/core/discovery:unittest",
+    ]
   }
 }
 
