--- a/tests/adapter/fuzztest/softbusadapterhisysevent_fuzzer/BUILD.gn
+++ b/tests/adapter/fuzztest/softbusadapterhisysevent_fuzzer/BUILD.gn
@@ -19,7 +19,7 @@ import("../../../../dsoftbus.gni")
 
 ##############################fuzztest##########################################
 ohos_fuzztest("SoftBusAdapterHiSysEventFuzzTest") {
-  module_out_path = "dsoftbus/adapter"
+  module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file = "$dsoftbus_root_path/tests/adapter/fuzztest/softbusadapterhisysevent_fuzzer"
 
   include_dirs = [
