--- a/tests/adapter/fuzztest/softbusadapterrange_fuzzer/BUILD.gn
+++ b/tests/adapter/fuzztest/softbusadapterrange_fuzzer/BUILD.gn
@@ -17,7 +17,7 @@ import("../../../../dsoftbus.gni")
 
 ##############################fuzztest##########################################
 ohos_fuzztest("SoftBusAdapterRangeFuzzTest") {
-  module_out_path = "dsoftbus/adapter"
+  module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file =
       "$dsoftbus_root_path/tests/adapter/fuzztest/softbusadapterrange_fuzzer"
   include_dirs = [ "$dsoftbus_root_path/adapter/common/include" ]
