--- a/tests/adapter/fuzztest/softbusdecryptdata_fuzzer/BUILD.gn
+++ b/tests/adapter/fuzztest/softbusdecryptdata_fuzzer/BUILD.gn
@@ -14,11 +14,10 @@
 #####################hydra-fuzz###################
 import("//build/test.gni")
 import("../../../../dsoftbus.gni")
-module_output_path = "dsoftbus/adapter"
 
 ##############################fuzztest##########################################
 ohos_fuzztest("SoftBusDecryptDataFuzzTest") {
-  module_out_path = module_output_path
+  module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file =
       "$dsoftbus_root_path/tests/adapter/fuzztest/softbusdecryptdata_fuzzer"
   include_dirs = [ "$dsoftbus_root_path/adapter/common/include" ]
