--- a/tests/core/authentication/fuzztest/unpackauthdata_fuzzer/BUILD.gn
+++ b/tests/core/authentication/fuzztest/unpackauthdata_fuzzer/BUILD.gn
@@ -14,11 +14,10 @@
 #####################hydra-fuzz###################
 import("//build/test.gni")
 import("../../../../../dsoftbus.gni")
-module_output_path = "dsoftbus/auth"
 
 ##############################fuzztest##########################################
 ohos_fuzztest("UnpackAuthDataFuzzTest") {
-  module_out_path = module_output_path
+  module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file = "$dsoftbus_root_path/tests/core/authentication/fuzztest/unpackauthdata_fuzzer"
   include_dirs = [
     "$dsoftbus_root_path/adapter/common/include/",
