--- a/tests/core/common/message_handler/fuzztest/messagehandler_fuzzer/BUILD.gn
+++ b/tests/core/common/message_handler/fuzztest/messagehandler_fuzzer/BUILD.gn
@@ -19,7 +19,7 @@ import("../../../../../../dsoftbus.gni")
 
 ##############################fuzztest##########################################
 ohos_fuzztest("MessageHandlerFuzzTest") {
-  module_out_path = "dsoftbus/common"
+  module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file = "$dsoftbus_root_path/tests/core/common/message_handler/fuzztest/messagehandler_fuzzer"
   include_dirs = [
     "$dsoftbus_root_path/adapter/common/include",
