--- a/tests/core/connection/common/fuzztest/connectioncommon_fuzzer/BUILD.gn
+++ b/tests/core/connection/common/fuzztest/connectioncommon_fuzzer/BUILD.gn
@@ -19,7 +19,7 @@ import("../../../../../../dsoftbus.gni")
 
 ##############################fuzztest##########################################
 ohos_fuzztest("ConnectionCommonFuzzTest") {
-  module_out_path = "dsoftbus/connection"
+  module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file = "$dsoftbus_root_path/tests/core/connection/common/fuzztest/connectioncommon_fuzzer"
 
   include_dirs = [
