--- a/tests/core/frame/fuzztest/softbusserverstub_fuzzer/BUILD.gn
+++ b/tests/core/frame/fuzztest/softbusserverstub_fuzzer/BUILD.gn
@@ -14,11 +14,10 @@
 #####################hydra-fuzz###################
 import("//build/test.gni")
 import("../../../../../dsoftbus.gni")
-module_output_path = "dsoftbus/core"
 
 ##############################fuzztest##########################################
 ohos_fuzztest("SoftBusServerStubFuzzTest") {
-  module_out_path = module_output_path
+  module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file =
       "$dsoftbus_root_path/tests/core/frame/fuzztest/softbusserverstub_fuzzer"
   include_dirs = [
