--- a/tests/sdk/bus_center/fuzztest/softbusclientmanager_fuzzer/BUILD.gn
+++ b/tests/sdk/bus_center/fuzztest/softbusclientmanager_fuzzer/BUILD.gn
@@ -15,11 +15,10 @@
 import("//build/config/features.gni")
 import("//build/test.gni")
 import("../../../../../dsoftbus.gni")
-module_output_path = "dsoftbus/bus_center"
 
 ##############################fuzztest##########################################
 ohos_fuzztest("SoftBusClientManagerFuzzTest") {
-  module_out_path = module_output_path
+  module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file = "$dsoftbus_root_path/tests/sdk/bus_center/fuzztest/softbusclientmanager_fuzzer"
   include_dirs = [ "$dsoftbus_root_path/sdk/bus_center/manager/include" ]
   cflags = [
