--- a/tests/sdk/discovery/fuzztest/discoveryservice_fuzzer/BUILD.gn
+++ b/tests/sdk/discovery/fuzztest/discoveryservice_fuzzer/BUILD.gn
@@ -19,7 +19,7 @@ import("../../../../../dsoftbus.gni")
 
 ##############################fuzztest##########################################
 ohos_fuzztest("DiscoveryServiceFuzzTest") {
-  module_out_path = "dsoftbus/discovery"
+  module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file =
       "$dsoftbus_root_path/tests/sdk/discovery/fuzztest/discoveryservice_fuzzer"
   include_dirs = [
