--- a/tests/sdk/frame/fuzztest/softbusclientstub_fuzzer/BUILD.gn
+++ b/tests/sdk/frame/fuzztest/softbusclientstub_fuzzer/BUILD.gn
@@ -97,7 +97,7 @@ ohos_static_library("softbus_client_static") {
 
 ##############################fuzztest##########################################
 ohos_fuzztest("SoftbusClientStubFuzzTest") {
-  module_out_path = "dsoftbus/sdk/frame"
+  module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file =
       "$dsoftbus_root_path/tests/sdk/frame/fuzztest/softbusclientstub_fuzzer"
   include_dirs = [
