--- a/tests/sdk/transmission/fuzztest/clienttranssessionmanager_fuzzer/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/clienttranssessionmanager_fuzzer/BUILD.gn
@@ -18,7 +18,7 @@ import("//build/test.gni")
 import("../../../../../dsoftbus.gni")
 ##############################fuzztest##########################################
 ohos_fuzztest("ClientTransSessionManagerFuzzTest") {
-  module_out_path = "dsoftbus/transmission"
+  module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file = "$dsoftbus_root_path/tests/sdk/transmission/fuzztest/clienttranssessionmanager_fuzzer"
 
   include_dirs = [
