--- a/tests/sdk/transmission/fuzztest/sendbytes_fuzzer/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/sendbytes_fuzzer/BUILD.gn
@@ -19,7 +19,7 @@ import("../../../../../dsoftbus.gni")
 
 ##############################fuzztest##########################################
 ohos_fuzztest("SendBytesFuzzTest") {
-  module_out_path = "dsoftbus/transmission"
+  module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file =
       "$dsoftbus_root_path/tests/sdk/transmission/fuzztest/sendbytes_fuzzer"
   include_dirs = [
