--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -15,6 +15,9 @@ import("../../dsoftbus.gni")
 import("../connection/common/conn_common.gni")
 import("../transmission/common/trans_common.gni")
 
+dsoftbus_root_path = "../.."
+softbus_adapter_common = "${dsoftbus_root_path}/adapter/common"
+
 common_utils_src = [
   "bitmap/softbus_bitmap.c",
   "network/softbus_network_utils.c",
