--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -20,6 +20,12 @@ import("../connection/conn.gni")
 import("../discovery/disc.gni")
 import("../transmission/trans.gni")
 
+dsoftbus_root_path = "../.."
+dsoftbus_feature_product_config_path =
+    "${dsoftbus_root_path}/adapter/default_config"
+softbus_adapter_config = "${dsoftbus_root_path}/adapter/default_config"
+dsoftbus_core_path = "${dsoftbus_root_path}/core"
+
 dsoftbus_server_common_src =
     auth_server_src + bus_center_server_src + conn_manager_src +
     disc_server_src + trans_session_src + softbus_permission_src
