--- a/sdk/BUILD.gn
+++ b/sdk/BUILD.gn
@@ -17,6 +17,8 @@ import("discovery/disc_sdk.gni")
 import("frame/frame_sdk.gni")
 import("transmission/trans_sdk.gni")
 
+dsoftbus_root_path = ".."
+
 common_client_src = bus_center_sdk_src + disc_sdk_src +
                     softbus_client_frame_src + trans_session_manager_sdk_src
 common_client_inc = bus_center_sdk_inc + disc_sdk_inc +
