--- a/tests/core/authentication/fuzztest/unpackauthdata_fuzzer/BUILD.gn
+++ b/tests/core/authentication/fuzztest/unpackauthdata_fuzzer/BUILD.gn
@@ -16,6 +16,8 @@ import("//build/test.gni")
 import("../../../../../dsoftbus.gni")
 
 ##############################fuzztest##########################################
+dsoftbus_root_path = "../../../../.."
+
 ohos_fuzztest("UnpackAuthDataFuzzTest") {
   module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file = "$dsoftbus_root_path/tests/core/authentication/fuzztest/unpackauthdata_fuzzer"
