--- a/tests/core/bus_center/test/BUILD.gn
+++ b/tests/core/bus_center/test/BUILD.gn
@@ -15,6 +15,7 @@ import("//build/test.gni")
 import("../../../../dsoftbus.gni")
 
 module_output_path = "dsoftbus/LNN"
+dsoftbus_root_path = "../../../.."
 
 ohos_unittest("HeartBeatMediumTest") {
   module_out_path = module_output_path
