--- a/tests/core/common/dfx/hidumper_adapter/fuzztest/softbushidumper_fuzzer/BUILD.gn
+++ b/tests/core/common/dfx/hidumper_adapter/fuzztest/softbushidumper_fuzzer/BUILD.gn
@@ -18,6 +18,9 @@ import("//build/test.gni")
 import("../../../../../../../dsoftbus.gni")
 
 ##############################fuzztest##########################################
+
+dsoftbus_root_path = "../../../../../../.."
+
 ohos_fuzztest("SoftBusHiDumperFuzzTest") {
   module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file = "$dsoftbus_root_path/tests/core/common/dfx/hidumper_adapter/fuzztest/softbushidumper_fuzzer"
