--- a/tests/core/common/dfx/hidumper_adapter/unittest/BUILD.gn
+++ b/tests/core/common/dfx/hidumper_adapter/unittest/BUILD.gn
@@ -17,6 +17,7 @@ import("//build/test.gni")
 import("../../../../../../dsoftbus.gni")
 
 module_output_path = "dsoftbus/common"
+dsoftbus_root_path = "../../../../../.."
 
 ohos_unittest("HidumperTest") {
   module_out_path = module_output_path
