--- a/tests/core/common/dfx/hisysevent_adapter/unittest/BUILD.gn
+++ b/tests/core/common/dfx/hisysevent_adapter/unittest/BUILD.gn
@@ -13,6 +13,8 @@
 
 import("../../../../../../dsoftbus.gni")
 
+dsoftbus_root_path = "../../../../../.."
+
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
   import("//build/lite/config/test.gni")
