--- a/tests/core/common/message_handler/unittest/BUILD.gn
+++ b/tests/core/common/message_handler/unittest/BUILD.gn
@@ -14,6 +14,8 @@
 import("//build/lite/config/component/lite_component.gni")
 import("../../../../../dsoftbus.gni")
 
+dsoftbus_root_path = "../../../../.."
+
 static_library("softbus_test_message_handler") {
   sources = [ "message_handler_test.c" ]
   include_dirs = [
