--- a/tests/core/connection/br/BUILD.gn
+++ b/tests/core/connection/br/BUILD.gn
@@ -15,6 +15,9 @@ import("//build/test.gni")
 import("../../../../dsoftbus.gni")
 
 module_output_path = "dsoftbus/connection"
+dsoftbus_root_path = "../../../.."
+softbus_adapter_common = "${dsoftbus_root_path}/adapter/common"
+
 config("softbus_connection_br_test_config") {
   include_dirs = [
     "$dsoftbus_root_path/core/common/include",
