--- a/tests/core/connection/wifi_direct/negotiate_state/BUILD.gn
+++ b/tests/core/connection/wifi_direct/negotiate_state/BUILD.gn
@@ -16,6 +16,7 @@ import("//build/test.gni")
 import("../../../../../dsoftbus.gni")
 
 module_output_path = "dsoftbus/connection"
+dsoftbus_root_path = "../../../../.."
 
 ohos_unittest("NegotiateStateTest") {
   module_out_path = module_output_path
