--- a/tests/core/frame/BUILD.gn
+++ b/tests/core/frame/BUILD.gn
@@ -14,6 +14,8 @@
 import("//build/ohos.gni")
 import("../../../dsoftbus.gni")
 
+dsoftbus_root_path = "../../.."
+
 config("softbus_frame_test_config") {
   include_dirs = [
     "$dsoftbus_root_path/service/softbus_server/include",
