--- a/tests/core/frame/fuzztest/softbusserverstub_fuzzer/BUILD.gn
+++ b/tests/core/frame/fuzztest/softbusserverstub_fuzzer/BUILD.gn
@@ -16,6 +16,9 @@ import("//build/test.gni")
 import("../../../../../dsoftbus.gni")
 
 ##############################fuzztest##########################################
+
+dsoftbus_root_path = "../../../../.."
+
 ohos_fuzztest("SoftBusServerStubFuzzTest") {
   module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file =
