--- a/tests/core/transmission/trans_channel/manager/trans_channel_manager_test/BUILD.gn
+++ b/tests/core/transmission/trans_channel/manager/trans_channel_manager_test/BUILD.gn
@@ -15,6 +15,8 @@ import("//build/test.gni")
 import("../../../../../../dsoftbus.gni")
 
 module_output_path = "dsoftbus/transmission"
+dsoftbus_root_path = "../../../../../.."
+softbus_adapter_common = "${dsoftbus_root_path}/adapter/common"
 
 ## UnitTest TransChannelManagerTest {{{
 ohos_unittest("TransChannelManagerTest") {
