--- a/tests/core/transmission/trans_channel/udp_negotiation/BUILD.gn
+++ b/tests/core/transmission/trans_channel/udp_negotiation/BUILD.gn
@@ -15,6 +15,8 @@ import("//build/test.gni")
 import("../../../../../dsoftbus.gni")
 
 module_output_path = "dsoftbus/transmission"
+dsoftbus_root_path = "../../../../.."
+softbus_adapter_common = "${dsoftbus_root_path}/adapter/common"
 
 ohos_unittest("TransUdpNegoTest") {
   module_out_path = module_output_path
