--- a/tests/adapter/unittest/BUILD.gn
+++ b/tests/adapter/unittest/BUILD.gn
@@ -17,6 +17,8 @@ if (defined(ohos_lite)) {
   import("//build/lite/config/test.gni")
   import("../../../dsoftbus.gni")
 
+  dsoftbus_root_path = "../../.."
+
   defines += [ "HAVE_PRO = 0" ]
 
   if (ohos_build_type == "debug") {
