--- a/tests/sdk/bus_center/fuzztest/refreshlnn_fuzzer/BUILD.gn
+++ b/tests/sdk/bus_center/fuzztest/refreshlnn_fuzzer/BUILD.gn
@@ -16,6 +16,9 @@ import("//build/test.gni")
 import("../../../../../dsoftbus.gni")
 
 ##############################fuzztest##########################################
+
+dsoftbus_root_path = "../../../../.."
+
 ohos_fuzztest("RefreshLNNFuzzTest") {
   module_out_path = dsoftbus_fuzz_out_path
   fuzz_config_file =
