--- a/tests/sdk/common/BUILD.gn
+++ b/tests/sdk/common/BUILD.gn
@@ -14,6 +14,8 @@
 import("//build/lite/config/component/lite_component.gni")
 import("../../../dsoftbus.gni")
 
+dsoftbus_root_path = "../../.."
+
 if (defined(ohos_lite)) {
   static_library("softbus_access_token_test") {
     sources = [ "src/softbus_access_token_test_virtual.c" ]
