--- a/tests/sdk/discovery/account/BUILD.gn
+++ b/tests/sdk/discovery/account/BUILD.gn
@@ -14,6 +14,8 @@
 import("//build/test.gni")
 import("../../../../dsoftbus.gni")
 module_output_path = "dsoftbus/discovery"
+dsoftbus_root_path = "../../../.."
+
 ohos_unittest("disc_account_test") {
   module_out_path = module_output_path
   sources = [ "disc_account_test.cpp" ]
