--- a/tests/sdk/discovery/benchmarktest/BUILD.gn
+++ b/tests/sdk/discovery/benchmarktest/BUILD.gn
@@ -13,6 +13,8 @@
 import("//build/test.gni")
 import("../../../../dsoftbus.gni")
 module_output_path = "dsoftbus/discovery"
+dsoftbus_root_path = "../../../.."
+
 ohos_benchmarktest("DiscoveryTest") {
   module_out_path = module_output_path
   sources = [ "discovery_test.cpp" ]
