--- a/tests/sdk/frame/fuzztest/softbusclientstub_fuzzer/BUILD.gn
+++ b/tests/sdk/frame/fuzztest/softbusclientstub_fuzzer/BUILD.gn
@@ -21,6 +21,8 @@ import("//foundation/communication/dsoftbus/sdk/frame/frame_sdk.gni")
 import("//foundation/communication/dsoftbus/sdk/frame/frame_sdk.gni")
 import("//foundation/communication/dsoftbus/sdk/transmission/trans_sdk.gni")
 import("../../../../../dsoftbus.gni")
+dsoftbus_root_path = "../../../../.."
+
 common_client_src = bus_center_sdk_src + disc_sdk_src +
                     softbus_client_frame_src + trans_session_manager_sdk_src
 common_client_inc = bus_center_sdk_inc + disc_sdk_inc +
