--- a/tests/sdk/transmission/BUILD.gn
+++ b/tests/sdk/transmission/BUILD.gn
@@ -14,6 +14,8 @@
 import("//build/test.gni")
 import("../../../dsoftbus.gni")
 
+dsoftbus_root_path = "../../.."
+
 native_source_path = rebase_path("$dsoftbus_root_path")
 dep_dir = "dsoftbus_enhance/test/sdk/transmission"
 trans_enhance_test = exec_script("$dsoftbus_root_path/check_sub_module.py",
