--- a/tests/sdk/transmission/trans_channel/auth/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/auth/BUILD.gn
@@ -16,6 +16,8 @@ import("//build/test.gni")
 import("../../../../../dsoftbus.gni")
 
 module_output_path = "dsoftbus/transmission"
+dsoftbus_root_path = "../../../../.."
+
 if (defined(ohos_lite)) {
   # L0
   static_library("auth_session_test") {
