--- a/tests/sdk/transmission/trans_channel/ble/phone/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/ble/phone/BUILD.gn
@@ -14,6 +14,8 @@
 import("//build/test.gni")
 import("../../../../../../dsoftbus.gni")
 module_output_path = "dsoftbus/transmission"
+dsoftbus_root_path = "../../../../../.."
+
 ohos_unittest("dsoftbus_auth_ble_phone") {
   module_out_path = module_output_path
   sources = [ "ble_auth_channel_phone_test.cpp" ]
