--- a/tests/sdk/transmission/trans_channel/tcp_direct/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/tcp_direct/BUILD.gn
@@ -15,6 +15,8 @@ import("//build/test.gni")
 import("../../../../../dsoftbus.gni")
 
 module_output_path = "dsoftbus/transmission"
+dsoftbus_root_path = "../../../../.."
+softbus_adapter_config = "${dsoftbus_root_path}/adapter/default_config"
 
 ohos_unittest("TransSdkTcpDirectTest") {
   module_out_path = module_output_path
