--- a/tests/sdk/transmission/trans_channel/udp/distributed_stream/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/udp/distributed_stream/BUILD.gn
@@ -14,6 +14,8 @@
 import("//build/test.gni")
 import("../../../../../../dsoftbus.gni")
 
+dsoftbus_root_path = "../../../../../.."
+
 module_output_path = "dsoftbus/transmission/stream"
 
 ohos_distributedtest("DistriStreamTest") {
