--- a/tests/sdk/transmission/trans_channel/udp/stream/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/udp/stream/BUILD.gn
@@ -14,6 +14,8 @@
 import("//build/lite/config/component/lite_component.gni")
 import("../../../../../../dsoftbus.gni")
 
+dsoftbus_root_path = "../../../../../.."
+
 config("stream_test") {
   defines = [ "FILLP_LINUX" ]
 }
