--- a/tests/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/vtp_instance_test/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/vtp_instance_test/BUILD.gn
@@ -15,6 +15,7 @@ import("//build/test.gni")
 import("../../../../../../../../dsoftbus.gni")
 
 module_output_path = "dsoftbus/transmission"
+dsoftbus_root_path = "../../../../../../../.."
 
 ## UnitTest VtpInstanceTest {{{
 ohos_unittest("VtpInstanceTest") {
