--- a/tests/core/bus_center/BUILD.gn
+++ b/tests/core/bus_center/BUILD.gn
@@ -18,6 +18,7 @@ group("unittest") {
   testonly = true
   deps = [
     "lnn:unittest",
+    "service:unittest",
     "test:unittest",
     "utils:unittest",
   ]
